--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,18 @@ services:
     depends_on:
       - db
 
+  client:
+    build:
+      context: ./client
+    container_name: nextjs_client
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./client:/app
+    working_dir: /app
+    command: "npm run dev"
+    restart: unless-stopped
+
   db:
     image: mysql/mysql-server:8.0
     container_name: mysql_server
