--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,37 +1,23 @@
-
 server {
     listen 80;
     server_name localhost;
 
-    # -----------------------
-    # 1) NEXT.JS
-    # -----------------------
+    # Next.js frontend
     location / {
-        proxy_pass http://client:3000; 
+        proxy_pass http://nextjs_client:3000;
         proxy_http_version 1.1;
-
-        # For WebSocket/HMR in dev mode
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        # Pass headers
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # -----------------------
-    # 2) PHP (Apache)
-    # -----------------------
+    # PHP backend - ændret for at matche din server struktur
     location /api/ {
-        proxy_pass http://php:80/; 
-        proxy_http_version 1.1;
-
+        proxy_pass http://php_server/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
 }
