--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,5 @@
+# Example Dockerfile for php:8.1-apache
 FROM php:8.1-apache
 
-# Install necessary PHP extensions
-RUN docker-php-ext-install mysqli pdo pdo_mysql
-
-# Copy application files
-COPY . /var/www/html
-
+# Install and enable pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql
